tests/language_modules/05_records/invalid_semantics/field_access_on_scalar.vf
module FieldAccessOnScalar

procedure main()
is
    let amount: Integer = 1
    check amount.id = 1
end main

end FieldAccessOnScalar